[package]
name = "ccdb"
version = "0.5.0"
authors = ["TheSlam <32799244+salmmanfred@users.noreply.github.com>"]
edition = "2018"
links = "./src/c/"
build = "./src/build.rs"
license = "MIT"
repository = "https://github.com/salmmanfred/ccdb"
description = "A small terminal based game engine"
readme = "README.md"
keywords = ["gamedev", "graphics","multithreading","engine"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openfile = "1.1.0"

[build-dependencies]
cc = "1.0"